--- a/styles.css
+++ b/styles.css
@@ -1,34 +1,67 @@
 body {
-    font-family: Verdana, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
-  
-  header {
-    background-color: #552f79;
-    color: #fff;
-    padding: 20px;
-  }
-  
-  h1 {
-    color: #fff;
-  }
+  font-family: Verdana, sans-serif;
+  margin: 0;
+  padding: 0;
+}
 
-  h2 {
-    color: #333;
-  }
-  
-  main {
-    margin: 20px;
-  }
-  
-  section {
-    margin-bottom: 20px;
-  }
-  
-  footer {
-    background-color: #261573;
-    color: #fff;
-    padding: 10px;
-    text-align: center;
-  }  
+header {
+  background-color: #552f79;
+  color: #fff;
+  width: fit-content;
+  border-radius: 25px;
+  margin-bottom: 20px;
+  padding: 20px;
+}
+
+h1 {
+  color: #fff;
+}
+
+h2 {
+  color: #333;
+}
+
+main {
+  margin: 20px;
+}
+
+nav {
+  margin-left: 1%;
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: left;
+  gap: 2em;
+}
+
+button {
+  padding: 0.5em;
+  border-radius: 5px;
+}
+
+section {
+  margin-bottom: 20px;
+}
+
+#projects {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  grid-gap: 20px;
+}
+
+div {
+  padding: 0.5em;
+  text-align: center;
+  border-width: 2px;
+  border-style: solid;
+  border-color: black;
+  border-radius: 5px;
+}
+
+footer {
+  background-color: #261573;
+  color: #fff;
+  padding: 10px;
+  text-align: center;
+}
