--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Verdana, sans-serif;
+ font-family: 'Urbanist', sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -34,6 +34,7 @@ nav {
   gap: 2em;
 }
 
+
 button {
   padding: 0.5em;
   border-radius: 5px;
@@ -43,15 +44,24 @@ section {
   margin-bottom: 20px;
 }
 
-#projects {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
-  grid-gap: 20px;
+.project-container {
+  display: flex;
+  flex-direction: row;
+  border-style: none;
+
+
+.project {
+    display: flex;
+    flex-direction: column;
+    width: 33%;
+ 
+  }
 }
 
 div {
-  padding: 0.5em;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding: 1em;
   text-align: center;
   border-width: 2px;
   border-style: solid;
@@ -64,4 +74,16 @@ footer {
   color: #fff;
   padding: 10px;
   text-align: center;
+}
+
+@media (max-width: 600px) {
+  .project-container {
+    flex-direction: column;
+  }
+
+  .project {
+    margin-bottom: 5%;
+    width: fit-content; 
+  }
+
 }
