--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,14 @@ body {
 header {
   background-color: #552f79;
   color: #fff;
-  width: fit-content;
+  width: 50%;
   border-radius: 25px;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 20px;
   padding: 20px;
+  text-align: center;
+  box-shadow: 5px 5px #d3d3d3;
 }
 
 h1 {
@@ -19,6 +23,8 @@ h1 {
 
 h2 {
   color: #333;
+  display: flex;
+  justify-content: center;
 }
 
 main {
@@ -26,10 +32,9 @@ main {
 }
 
 nav {
-  margin-left: 1%;
   display: flex;
   flex-direction: row;
-  justify-content: left;
+  justify-content: center;
   align-items: left;
   gap: 2em;
 }
@@ -37,7 +42,7 @@ nav {
 
 button {
   padding: 0.5em;
-  border-radius: 5px;
+  border-radius: 3px;
 }
 
 section {
