--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,21 @@
 body {
- font-family: 'Urbanist', sans-serif;
+  font-family: "Urbanist", sans-serif;
   margin: 0;
   padding: 0;
 }
 
 header {
-  background-color: #552f79;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: auto;
+  height: 20vh;
+  background-image: url(assets/monarchborder.png);
+  background-size: cover;
   color: #fff;
-  width: 50%;
-  border-radius: 25px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 20px;
   padding: 20px;
   text-align: center;
-  box-shadow: 5px 5px #d3d3d3;
+  text-shadow: 2px 2px 2px black;
 }
 
 h1 {
@@ -32,6 +33,7 @@ main {
 }
 
 nav {
+  margin-top: 15px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -39,10 +41,13 @@ nav {
   gap: 2em;
 }
 
-
 button {
   padding: 0.5em;
   border-radius: 3px;
+}
+
+button:hover {
+  background-color: #bfa2db;
 }
 
 section {
@@ -54,12 +59,10 @@ section {
   flex-direction: row;
   border-style: none;
 
-
-.project {
+  .project {
     display: flex;
     flex-direction: column;
     width: 33%;
- 
   }
 }
 
@@ -88,7 +91,6 @@ footer {
 
   .project {
     margin-bottom: 5%;
-    width: fit-content; 
+    width: fit-content;
   }
-
 }
