--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,6 @@ h2 {
 }
 
 main {
-  margin: 20px;
 }
 
 nav {
@@ -44,8 +43,8 @@ nav {
 button {
   padding-left: 1em;
   padding-right: 1em;
-  padding-top: .5em;
-  padding-bottom: .5em;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
   border-radius: 3px;
   border-width: 2px;
 }
@@ -55,37 +54,63 @@ button:hover {
 }
 
 section {
+  margin-left: 10%;
   margin-bottom: 20px;
+}
+
+#projects {
 }
 
 .project-container {
   display: flex;
   flex-direction: row;
   border-style: none;
+  justify-content: space-evenly;
 
   .project {
     display: flex;
     flex-direction: column;
-    width: 33%;
+    min-width: 25%;
+    max-width: 33%;
   }
 }
 
-
-
 div {
-  margin-left: 5%;
-  margin-right: 5%;
+  margin-left: 3%;
+  margin-right: 3%;
   padding: 1em;
-  text-align: center;
+  text-align: left;
   border-width: 2px;
   border-style: solid;
   border-color: black;
   border-radius: 5px;
 }
+h3 {
+  text-align: center;
+}
+
+p {
+  margin-top: 2em;
+}
 
 .clicked {
   background-color: lightgrey;
   width: 50%;
+}
+
+.left {
+  position: absolute;
+  left:0px; 
+  width: 64px;
+  height: 64px;
+
+}
+
+.right {
+  position: absolute;
+  right:0px;
+  width: 64px;
+  height: 64px;
 }
 
 footer {
