--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,7 @@ section {
   flex-direction: row;
   border-style: none;
   justify-content: space-evenly;
+}
 
   .project {
     display: flex;
@@ -73,7 +74,7 @@ section {
     min-width: 25%;
     max-width: 33%;
   }
-}
+
 
 div {
   margin-left: 3%;
@@ -101,6 +102,7 @@ p {
 .left {
   position: absolute;
   left:0px; 
+  bottom: 10px;
   width: 64px;
   height: 64px;
 
