--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ header {
   justify-content: center;
   width: auto;
   height: 20vh;
-  background-image: url(assets/monarchborder.png);
+  background-image: url("assets/monarchborder.png");
   background-size: cover;
   color: #fff;
   padding: 20px;
@@ -68,13 +68,13 @@ section {
   justify-content: space-evenly;
 }
 
-  .project {
-    display: flex;
-    flex-direction: column;
-    min-width: 25%;
-    max-width: 33%;
-  }
-
+.project {
+  display: flex;
+  flex-direction: column;
+  min-width: 25%;
+  max-width: 33%;
+  margin-bottom: 5%;
+}
 
 div {
   margin-left: 3%;
@@ -99,20 +99,30 @@ p {
   width: 50%;
 }
 
+img {
+}
+
 .left {
   position: absolute;
-  left:0px; 
-  bottom: 10px;
+  left: 0px;
   width: 64px;
   height: 64px;
-
+  background-color: transparent;
+  border-style: none;
 }
 
 .right {
   position: absolute;
-  right:0px;
+  right: 0px;
   width: 64px;
   height: 64px;
+  background-color: transparent;
+  border-style: none;
+}
+
+.left:hover,
+.right:hover {
+  background-color: initial;
 }
 
 footer {
@@ -125,10 +135,5 @@ footer {
 @media (max-width: 600px) {
   .project-container {
     flex-direction: column;
-  }
-
-  .project {
-    margin-bottom: 5%;
-    width: fit-content;
   }
 }
