--- a/styles.css
+++ b/styles.css
@@ -29,17 +29,18 @@ h2 {
 }
 
 nav {
-  margin-top: 15px;
+  margin-top: 2%;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: left;
   gap: 2em;
+  margin-bottom: 3%;
 }
 
 button {
-  padding-left: 1em;
-  padding-right: 1em;
+  padding-left: 1.5em;
+  padding-right: 1.5em;
   padding-top: 0.5em;
   padding-bottom: 0.5em;
   border-radius: 3px;
@@ -51,8 +52,8 @@ button:hover {
 }
 
 section {
-  margin-left: 10%;
-  margin-bottom: 20px;
+  margin-bottom: 4%;
+  margin-top: 2%;
 }
 
 .project-container {
@@ -66,6 +67,7 @@ section {
 .animated {
   animation-name: movingLeft;
   animation-duration: 1s;
+  animation-fill-mode: forwards;
 }
 @keyframes movingLeft {
   0% {
@@ -99,7 +101,8 @@ h3 {
 }
 
 p {
-  margin-top: 2em;
+  margin-left: 10%;
+  font-size: larger;
 }
 
 .clicked {
