--- a/styles.css
+++ b/styles.css
@@ -56,12 +56,24 @@ section {
   margin-top: 2%;
 }
 
+#projects {
+  position: relative;
+  padding-left: 8%;
+  padding-right: 8%;
+}
+
 .project-container {
   display: flex;
   flex-direction: row;
   border-style: none;
   justify-content: space-evenly;
   position: relative;
+  padding-top: 2%;
+}
+
+.carousel-frame {
+  display: flex;
+  overflow: hidden;
 }
 
 .animated {
@@ -83,10 +95,6 @@ section {
   flex-direction: column;
   min-width: 25%;
   max-width: 33%;
-  margin-bottom: 5%;
-}
-
-div {
   margin-left: 3%;
   margin-right: 3%;
   padding: 1em;
@@ -96,6 +104,7 @@ div {
   border-color: black;
   border-radius: 5px;
 }
+
 h3 {
   text-align: center;
 }
@@ -113,6 +122,7 @@ p {
 .left {
   position: absolute;
   left: 0px;
+  top: 50%;
   background-color: transparent;
   border-style: none;
   cursor: pointer;
@@ -121,6 +131,7 @@ p {
 .right {
   position: absolute;
   right: 0px;
+  top: 50%;
   background-color: transparent;
   border-style: none;
   cursor: pointer;
