--- a/styles.css
+++ b/styles.css
@@ -73,20 +73,21 @@ section {
 
 .carousel-frame {
   display: flex;
-  overflow: hidden;
 }
 
 .animated-left {
   animation-name: movingLeft;
   animation-duration: 1s;
   animation-fill-mode: forwards;
+  transform: translateX(-50%);
 }
+
 @keyframes movingLeft {
   0% {
     transform: translateX(0);
   }
   100% {
-    transform: translateX(-50%);
+    transform: translateX(100);
   }
 }
 
@@ -94,6 +95,7 @@ section {
   animation-name: movingRight;
   animation-duration: 1s;
   animation-fill-mode: forwards;
+  transform: translateX(50%);
 }
 
 @keyframes movingRight {
@@ -101,11 +103,9 @@ section {
     transform: translateX(0);
   }
   100% {
-    transform: translateX(50%);
+    transform: translateX(100);
   }
 }
-
-/* currently this looks weird when you click a button after the first one has been clicked because it sets the original position back to 0. also why isn't this comment gray? */
 
 .project {
   display: flex;
@@ -140,8 +140,9 @@ p {
   position: absolute;
   left: 0px;
   top: 50%;
-  background-color: transparent;
+  background-color: rgba(211, 211, 211, 0.6);
   border-style: none;
+  border-radius: 10px;
   cursor: pointer;
 }
 
@@ -149,14 +150,15 @@ p {
   position: absolute;
   right: 0px;
   top: 50%;
-  background-color: transparent;
+  background-color: rgba(211, 211, 211, 0.6);
   border-style: none;
+  border-radius: 10px;
   cursor: pointer;
 }
 
 .left:hover,
 .right:hover {
-  background-color: initial;
+  background-color: rgba(211, 211, 211, 0.6);
 }
 
 footer {
